# civm_scan

./: Cargo.toml  build_acquire.bash  build_recon_mac_to_cluster.bash  build_recon_win_to_cluster.bash  build_scan_control.bash  build_seq_lib.bash  build_sequence.bash  notes.txt  run_native_windows.bash  setup.bash
acquire/: Cargo.toml
acquire/src/: adjustment.rs  args.rs  build.rs  lib.rs  main.rs  protocol.rs  scout.rs
build_sequence/: Cargo.toml
build_sequence/src/: build_directory.rs  lib.rs  main.rs
cs_table/: Cargo.toml
cs_table/src/: cs_table.rs  lib.rs
headfile/: Cargo.toml
headfile/src/: headfile.rs  lib.rs
matlab_prototypes/: pulse_bandwidth.m
mr_data/: Cargo.toml
mr_data/src/: cfl.rs  lib.rs  mrd.rs
recon/: Cargo.toml
recon/src/: bart_wrapper.rs  cfl.rs  lib.rs  main.rs  mrd.rs  recon_config.rs  slurm.rs  test.rs  utils.rs  vol_manager.rs  volume_manager.rs
review/: Cargo.toml
review/src/: main.rs
scan_control/: Cargo.toml
scan_control/src/: args.rs  command.rs  lib.rs  main.rs
scan_control/vb_script/: maximize_window.vbs  run.vbs  set_mrd.vbs  set_ppr.vbs  setup.vbs  status.vbs
scan_ui/: Cargo.toml
scan_ui/src/: basic_adjustment.rs  image_utilities.rs  lib.rs  main.rs  protocol_panel.rs  scout_viewer.rs  sequence_editor.rs  sequence_viewer.rs  study_panel.rs
seq_lib/: Cargo.toml
seq_lib/src/: compressed_sensing.rs  diffusion.rs  dwi_multi_echo.rs  fse_3_echo.rs  fse_dti.rs  headfile.rs  lib.rs  main.rs  mgre.rs  multi_echo_2d.rs  one_pulse.rs  protocol.rs  pulse_sequence.rs  rf_cal.rs  rfcal.rs  scout.rs  se_2d.rs  se_dti.rs
seq_lib/tests/: integration.rs
seq_sim/: Cargo.toml
seq_sim/src/: main.rs
seq_tools/: Cargo.toml  plot_seqtools.m  plotter.m
seq_tools/src/: FSE4Echo.rs  GradientEcho.rs  Multi6Echo.rs  acq_event.rs  command_string.rs  diffusion.rs  event_block.rs  event_queue.rs  execution.rs  grad_cal.rs  gradient_event.rs  gradient_frame.rs  gradient_list.rs  gradient_matrix.rs  hardware_constants.rs  lib.rs  loop_structure.rs  lut_driver.rs  matrix_driver.rs  pe_table.rs  ppl.rs  ppl_constants.rs  ppl_function.rs  ppl_header.rs  pulse.rs  pulse_function.rs  resource.rs  rf_event.rs  rf_frame.rs  rf_state.rs  seq_event.rs  seqframe.rs  timing_constants.rs  utils.rs
seq_tools/test_data/: SpinEchoDiffusion3D.fth  SpinEchoDiffusion3D.ppl  civm_grad.seq  civm_grad.txt  civm_rf.seq  civm_rf.txt  spinechodiffusion3d.ppr
seq_tools/tests/: integration.rs
spin_sim/: Cargo.toml
spin_sim/src/: lib.rs  main.rs  matmath.rs  spin.rs  spin_operators.rs  unit.rs
spin_sim/tests/: integration_tests.rs
test_data/adj_data/: adjustment_results.json
test_data/adj_data/freq/: civm_grad.seq  one_pulse.ac  one_pulse.fth  one_pulse.mrd  one_pulse.ppl  one_pulse.ppr
test_data/adj_data/rf/: civm_grad.seq  civm_grad_params.txt  civm_rf.seq  civm_rf_params.txt  rf_cal.ac  rf_cal.fth  rf_cal.json  rf_cal.mrd  rf_cal.ppl  rf_cal.ppr
test_data/scout_data/m0/: civm_grad.seq  civm_grad_params.txt  civm_rf.seq  m0.ac  m0.fth  m0.mrd  m0.ppl  m0.ppr  meta.txt  mrd_to_kspace.mtk  scout.json
test_data/scout_data/m1/: civm_grad_params.txt  civm_rf_params.txt  m1.ac  m1.fth  m1.mrd  m1.ppl  m1.ppr  meta.txt  mrd_to_kspace.mtk
test_data/scout_data/m2/: civm_grad.seq  m2.ac  m2.fth  m2.mrd  m2.ppl  m2.ppr  meta.txt  scout.json
test_env/cs_tables/: stream_CS480_8x_pa18_pb54
test_env/cs_tables/fse/: stream_CS480_8x_pa18_pb54
test_env/protocols/: 25um_mgre.json  5xfad.json
test_env/sequence_library/: 1p.json  35um_b0_se.json  5xfad_se.json  mgre.json  multi_echo_2d.json  scout.json
test_env/vb_script/: abort.vbs  load_table.vbs  scan_app_test.vbs  set_mrd.vbs  set_ppr.vbs  status.vbs
test_env/vb_script/config/: build_sequence.json
test_env/vb_script/sequence_library/: 1p.json  45um_test.json  5xfad_fse.json  5xfad_fse_b0.json  5xfad_test.json  rf_cal.json  t2map.json
utils/: Cargo.toml
utils/src/: lib.rs
