[workspace]

members = [
    "seq_tools",
    "seq_lib",
    "scan_ui",
    "scan_control",
    "build_sequence",
    "recon",
    "mr_data",
    "cs_table",
    "acquire",
    "headfile",
    "utils",
    "review",
]

# this determines which package is the entry point for cargo run (if multiple binaries exist)
default-members = ["scan_ui"]