[package]
name = "acquire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headfile = {path = "../headfile"}
seq_tools = {path = "../seq_tools"}
seq_lib = {path = "../seq_lib"}
cs_table = {path = "../cs_table"}
build_sequence = {path ="../build_sequence"}
regex = "1"
serde = { version = "1.0.144", features = ["derive"] }
toml = "0.5"
serde_json = "1.0.87"
encoding = "0.2"
glob = "0.3.0"
clap = { version = "4.0.18", features = ["derive"] }
dyn-clone = "1.0.9"