[package]
name = "mr_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acquire = {path = "../acquire"}
seq_lib = {path = "../seq_lib"}
cs_table = {path = "../cs_table"}
byteorder = "1.4.3"
ndarray = "0.15.4"