[package]
name = "mr_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acquire = {path = "../acquire"}
seq_lib = {path = "../seq_lib"}
cs_table = {path = "../cs_table"}
utils = {path = "../utils"}
byteorder = "1.4.3"
ndarray = "0.15.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
rustfft = "6.1.0"
num-complex = "0.4.2"
nifti = "0.14.0"