[package]
name = "recon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path = "../utils"}
acquire = {path = "../acquire"}
headfile = {path = "../headfile"}
seq_lib = {path = "../seq_lib"}
mr_data = {path = "../mr_data"}
ndarray = "0.15.4"
byteorder = "1.4.3"
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
whoami = "1.2.1"
regex = "1.6.0"
clap = { version = "4.0.18", features = ["derive"] }
glob = "0.3.0"