[package]
name = "review"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path ="../utils"}
mr_data = {path = "../mr_data"}
headfile = {path = "../headfile"}
ndarray = "0.15.4"
byteorder = "1.4.3"
eframe = "0.19.0"