[package]
name = "scan_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
build_sequence = { path="../build_sequence" }
mr_data = { path = "../mr_data" }
acquire = {path = "../acquire"}
ndarray = "0.15.4"
ndarray-stats = "0.5.1"
utils = {path = "../utils"}
serde_json = "1.0.87"
serde = { version = "1.0.144", features = ["derive"] }
seq_tools = {path = "../seq_tools"}
seq_lib = {path = "../seq_lib"}
scan_control = { path = "../scan_control"}