[package]
name = "spin_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
common_math = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
seq_lib = {path = "../seq_lib"}
seq_tools = {path = "../seq_tools"}